--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorTop2">#70c3fd</color>
     <color name="colorTop1">#39aeff</color>
     <color name="colorImg">#ffffff</color>
+    <color name="colorRed">#ff0000</color>
 </resources>
