--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -26,14 +26,16 @@
             android:padding="@dimen/padding_quiz"
             android:text="@string/ponts"
             android:textSize="@dimen/text_size"/>
+
         <TextView
             android:id="@+id/points_count"
-            android:layout_width="0dp"
+            style="@style/AlertDialog.AppCompat.Light"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_row="0"
             android:layout_marginLeft="@dimen/margin_quiz2"
             android:layout_marginStart="@dimen/margin_quiz2"
-            android:layout_height="wrap_content"
+            android:layout_row="0"
             android:padding="@dimen/padding_quiz"
             android:textSize="@dimen/text_size"
             />
@@ -72,20 +74,21 @@
             android:padding="6dp"
             android:text="@string/Lives"
             android:textSize="@dimen/text_size"/>
+
         <TextView
             android:id="@+id/lives_count"
-            android:layout_width="0dp"
+            style="@style/AlertDialog.AppCompat.Light"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_row="0"
             android:layout_marginLeft="@dimen/margin_quiz2"
             android:layout_marginStart="@dimen/margin_quiz2"
-            android:layout_height="wrap_content"
+            android:layout_row="0"
             android:padding="@dimen/padding_quiz"
             android:textSize="@dimen/text_size"
             />
 
         <ImageView
-            android:clickable="true"
             android:id="@+id/rate_img"
             android:layout_width="80dp"
             android:layout_height="34dp"
@@ -94,6 +97,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:layout_row="0"
+            android:clickable="true"
             android:padding="6dp"
             android:src="@drawable/medals"
             android:text="@string/rate"/>
@@ -107,18 +111,14 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/title"
             style="@style/AlertDialog.AppCompat.Light"
+            android:layout_width="285dp"
+            android:layout_height="100dp"
+            android:gravity="center"
             android:text="@string/choose_excess_image1"
             android:textSize="30sp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/AlertDialog.AppCompat.Light"
-            android:text="@string/choose_excess_image2"
-            android:textSize="30sp"/>
     </LinearLayout>
 
     <!--Images-->
@@ -140,20 +140,20 @@
             android:gravity="center">
 
             <ImageView
-                android:clickable="true"
                 android:id="@+id/img1"
                 style="@style/image"
                 android:layout_width="177dp"
                 android:layout_height="139dp"
-                android:layout_margin="4dp"/>
+                android:layout_margin="2dp"
+                android:clickable="true"/>
 
             <ImageView
-                android:clickable="true"
                 android:id="@+id/img2"
                 style="@style/image"
                 android:layout_width="177dp"
                 android:layout_height="139dp"
-                android:layout_margin="4dp"/>
+                android:layout_margin="2dp"
+                android:clickable="true"/>
         </LinearLayout>
 
         <LinearLayout
@@ -163,20 +163,20 @@
             android:gravity="center">
 
             <ImageView
-                android:clickable="true"
                 android:id="@+id/img3"
                 style="@style/image"
                 android:layout_width="177dp"
                 android:layout_height="139dp"
-                android:layout_margin="4dp"/>
+                android:layout_margin="2dp"
+                android:clickable="true"/>
 
             <ImageView
-                android:clickable="true"
                 android:id="@+id/img4"
                 style="@style/image"
                 android:layout_width="177dp"
                 android:layout_height="139dp"
-                android:layout_margin="4dp"/>
+                android:layout_margin="2dp"
+                android:clickable="true"/>
         </LinearLayout>
 
     </GridLayout>
