--- a/app/src/main/res/layout-large/fragment_quiz.xml
+++ b/app/src/main/res/layout-large/fragment_quiz.xml
@@ -1,10 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
+              xmlns:ads="http://schemas.android.com/apk/res-auto"
               android:id="@+id/quiz"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@color/colorBack"
               android:orientation="vertical"
+              android:gravity="center"
               tools:context="com.nico.quiz.QuizFragment">
 
     <GridLayout
@@ -122,6 +124,7 @@
 
     <!--Images-->
     <GridLayout
+        android:id="@+id/grid_images"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2"
@@ -180,4 +183,11 @@
 
     </GridLayout>
 
+    <!-- view for AdMob Banner Ad -->
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id"/>
 </LinearLayout>
