--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -2,20 +2,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="360dp"
                 android:layout_height="420dp"
-                android:background="@color/colorBack">
+                android:layout_gravity="center"
+                android:padding="6dp"
+                android:background="@color/colorBack"
+                android:gravity="center">
 
     <TextView
         android:id="@+id/message_dialog_answer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/btn_next"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
+        android:layout_marginBottom="26dp"
         android:text="message_dialog_answer"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_above="@+id/btn_next"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="26dp"/>
+        android:textStyle="bold"/>
 
     <ImageView
         android:id="@+id/img_dialog_answer"
@@ -29,26 +32,26 @@
         android:id="@+id/title_dialog_answer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/img_dialog_answer"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
+        android:layout_marginBottom="13dp"
         android:text="title"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_above="@+id/img_dialog_answer"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="13dp"/>
+        android:textStyle="bold"/>
 
     <Button
         android:id="@+id/btn_next"
+        style="@style/dialog_buton"
         android:layout_width="220dp"
         android:layout_height="60dp"
-        style="@style/dialog_buton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
         android:clickable="true"
         android:text="@string/next_level"
         android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:layout_marginBottom="20dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:textStyle="bold"/>
 
 </RelativeLayout>
